# FinFow

./: .dockerignore  .env.dev  .env.prod  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  env.example  pyproject.toml
src/bot/: __init__.py  bot.py  commands.py
src/bot/keyboards/: __init__.py  article_kb.py  contractor_kb.py  creditor_kb.py  date_kb.py  employee_kb.py  founder_kb.py  material_kb.py  project_kb.py  start_kb.py  utils.py  wallet_kb.py
src/bot/keyboards/calendar/: __init__.py  common.py  custom_calendar.py  schemas.py
src/bot/middlewares/: state_logger.py
src/bot/routers/: __init__.py  amount_comment_router.py  command_router.py  date_type_router.py  navigation_router.py  start_router.py
src/bot/routers/income/: __init__.py  confirm_income_router.py  income_router.py
src/bot/routers/outcome/: __init__.py  confirm_outcome_router.py  outcome_articles.py  outcome_router.py
src/bot/routers/transfer/: __init__.py  confirm_operation_router.py  transfer_router.py
src/bot/state/: __init__.py  operation_state.py
src/bot/utils/: legacy_messages.py
src/core/: config.py  logger.py
src/db/: __init__.py
src/db/lists/: __init__.py  fill.py
src/db/models/: __init__.py  articles.py  contractors.py  creditors.py  employees.py  founders.py  materials.py  projects.py  wallets.py
src/db/operations/: __init__.py  incomes.py  outcomes.py  transfers.py
src/db/service/: __init__.py  base.py  init_db.py  session.py
